# Hispano

./: .gitignore  Cargo.toml  DICCIONARIO.md  README.md
app/: jefe.his
app/ejemplos/: bucle_cuando.his  bucle_mientras.his  bucle_siempre.his  condicional_coincide.his  condicional_si.his  implementar.his  mod.his  typos.his
function/: main.rs
function/interpreter/: formatter.rs  mod.rs  parser.rs  translator.rs
function/writer/: creator.rs  mod.rs  preparer.rs  searcher.rs
output/: main.rs
output/ejemplos/: bucle_cuando.rs  bucle_loop.rs  bucle_mientras.rs  bucle_siempre.rs  condicional_coincide.rs  condicional_si.rs  implementar.rs  imprimir_si.rs  mod.rs  typos.rs
src/: main.rs
